# mignificient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/docker/alexnet/: Dockerfile  kernel.py  run.py
benchmarks/docker/alexnet/input/: run_docker.sh
benchmarks/docker/bert/: Dockerfile  README.md  bert.py  requirements.txt  test1.py  test2.py
benchmarks/docker/bert/input/: run_docker.sh
benchmarks/docker/bfs/: Dockerfile  Makefile  README.md  bfs.cu  main.cu
benchmarks/docker/bfs/input/: run_docker.sh
benchmarks/docker/midas/: Dockerfile  kernel.py  requirements.txt  run.py
benchmarks/docker/midas/input/: run_docker.sh
benchmarks/docker/resnet50-py/: Dockerfile  README.md  kernel.py  main.py  run.py
benchmarks/docker/resnet50-py/input/: run_docker.sh
benchmarks/docker/resnext101/: kernel.py  main.py
benchmarks/docker/resnext101/input/: run_docker.sh
benchmarks/docker/vgg19/: Dockerfile  kernel.py  main.py
benchmarks/docker/vgg19/input/: run_docker.sh
benchmarks/docker/yolop/: Dockerfile  kernel.py  requirements.txt  run.py
benchmarks/docker/yolop/input/: run_docker.sh
benchmarks/mig/: mig-isolation-bench.py  plot-mig.py
common/: CMakeLists.txt
common/include/mignificient/ipc/: config.hpp  types.hpp
common/src/: config.cpp
config/: iceoryx2.toml  invoker.json.in  orchestrator.json  orchestrator.json.in
examples/: CMakeLists.txt  cubin.txt  vector_add.cu  vector_add.json
executor/: CMakeLists.txt  executor.cpp  executor.hpp  executor_cpp.cpp  function.cpp
executor/include/mignificient/executor/: executor.hpp
executor/python/: __init__.py  cli.py  executor.cpp
executor/src/: executor.cpp  executor_cpp.cpp  function.cpp
gpuless/: CMakeLists.txt  utils.cpp  utils.hpp
gpuless/analysis/: libcudaanalysis.cpp
gpuless/argument_analysis/: libarganalysis.cpp
gpuless/schemas/: Makefile  allocation_protocol.fbs  allocation_protocol_generated.h  api_boilerplate.py  cublas_calls.fbs  cublas_calls_generated.h  cuda_runtime_calls.fbs  cuda_runtime_calls_generated.h  cudevice_attributes.fbs  cudevice_attributes_generated.h  cudnn_calls.fbs  cudnn_calls_generated.h  trace_execution_protocol.fbs  trace_execution_protocol_generated.h
gpuless/trace/: abstract_cuda_api_call.hpp  api  api_boilerplate.py  cubin_analysis.cpp  cubin_analysis.hpp  cublas_api_calls.cpp  cublas_api_calls.hpp  cuda_api_calls.cpp  cuda_api_calls.hpp  cuda_internals.hpp  cuda_trace.cpp  cuda_trace.hpp  cuda_trace_converter.cpp  cuda_trace_converter.hpp  cuda_virtual_device.cpp  cuda_virtual_device.hpp  cudnn_api_calls.cpp  cudnn_api_calls.hpp  dlsym_util.cpp  dlsym_util.hpp  hijack_cublas.cpp  hijack_cudnn.cpp  libgpuless.cpp  libgpuless.hpp  trace_executor.hpp  trace_executor_local.cpp  trace_executor_local.hpp  trace_executor_shmem_client.cpp  trace_executor_shmem_client.hpp  trace_executor_tcp_client.cpp  trace_executor_tcp_client.hpp
gpuless/trace/manager/: manager.cpp  manager.hpp  manager_device.cpp  manager_device.hpp  test_swap  test_swap.cu
invoker/: CMakeLists.txt  cli.cpp
orchestrator/: CMakeLists.txt  http.cpp  http.hpp  orchestrator.cpp
orchestrator/include/mignificient/orchestrator/: client.hpp  device.hpp  event.hpp  executor.hpp  http.hpp  invocation.hpp  orchestrator.hpp  users.hpp
orchestrator/src/: cli.cpp  client.cpp  device.cpp  executor.cpp  http.cpp  orchestrator.cpp
tools/: configure-mig.sh  list-gpus.sh  start.sh  stop.sh
